Refactor Login and Register components for improved UX and code clarity
- Updated Login component to enhance error handling and user feedback.
- Simplified error message logic and added console logging for user data.
- Adjusted layout and styling in Login and Register components for better responsiveness.
- Introduced new Register.css for styling the registration page.
- Enhanced TakeOrder component with date picker and improved form validation.
- Added toast notifications for order confirmation.
- Updated server-side logic to return additional user information upon login.
- Improved database query logging for user retrieval.
- Refined CSS styles across components for consistency and better visual appeal.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
 - Sistemare alert per invio degli ordini 
+- setConfirmOrder(true) quando si invia un ordine
+- sistemare modifica ordine da loggato
+
+
+- GESTIRE ORDINI e poi LOGOUT
+
+
 - Mostrare un riepilogo dell'ordine
 - Inserire la modifica degli ordini (entro tot ore dall'invio)
 - Inserire la DATAAAA negli ordini
@@ -7,3 +14,12 @@
 - Inserire la modifica del profilo
 
 - Far si che l'admin possa inserire degli ordini 
+
+
+
+
+
+
+FATTE:
+- Sistemate le proporzioni su schermi diversi
+
