--- a/TODO.txt
+++ b/TODO.txt
@@ -1,25 +1,22 @@
-- Sistemare alert per invio degli ordini 
-- setConfirmOrder(true) quando si invia un ordine
-- sistemare modifica ordine da loggato
 
 
-- GESTIRE ORDINI e poi LOGOUT
-
-
-- Mostrare un riepilogo dell'ordine
-- Inserire la modifica degli ordini (entro tot ore dall'invio)
-- Inserire la DATAAAA negli ordini
-
-
+IMPORTANTI
+- Mostrare lista ordini
 - Inserire la modifica del profilo
+- Inserire la modifica degli ordini (entro tot ore dall'invio)
+- Gesire ordini e login/LOGOUT
 
-- Far si che l'admin possa inserire degli ordini 
+MEDIE
+- Far si che l'admin possa inserire degli ordini
 
-
-
+INUTILI
+- sovrapporre correttamente il colore di intestazione nei menù a tendina nella selezione della data e dell'ora in TakeOrder
 
 
 
 FATTE:
 - Sistemate le proporzioni su schermi diversi
-
+- Mostrare un riepilogo dell'ordine
+- Inserire la DATAAAA negli ordini
+- Sistemare alert per invio degli ordini 
+- setConfirmOrder(true) quando si invia un ordine
