--- a/TODO.txt
+++ b/TODO.txt
@@ -20,3 +20,5 @@ FATTE:
 - Inserire la DATAAAA negli ordini
 - Sistemare alert per invio degli ordini 
 - setConfirmOrder(true) quando si invia un ordine
+
+asdadsadasd
