feat: Enhance order management with sorting, filtering, and updated delete functionality

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,11 @@
 IMPORTANTI
 - Inserire la modifica del profilo
 - Visuale dell'admin
+- Pulsanti cancella ordine
 
 MEDIE
 - Far si che l'admin possa inserire degli ordini
+- Far fare al server, periodicamente una funzione per controllare se data consegna è passata e cambiare lo stato dell'ordine
 
 
 INUTILI
